<resources>
    <string name="app_name">Different Color</string>
    <string name="score">score</string>
    <string name="life_indicator">I</string>
    <string name="default_lives">III</string>
    <string name="default_score">0</string>
    <string name="start_new_game">Play</string>
    <string name="exit_game">Quit</string>
    <string name="high_score">High Score</string>
    <string name="default_high_score">0</string>

    <string name="high_score_key">high_score_key</string>
    <string name="sound_enabled_key">sound_enabled_key</string>
    <string name="home_button_image_desc">home button image</string>
    <string name="sound_button_image_desc">sound button image</string>
</resources>
