<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/different_color_back1"
    android:orientation="vertical"
    tools:context="com.omikronsoft.differentcolor.activity.Main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"/>

        <ImageButton
            android:id="@+id/button_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/sound_button_image_desc"
            android:onClick="processVoiceButtonClick"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/ic_volume_up_black_100dp"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@color/button_back"
            android:onClick="startNewGame"
            android:text="@string/start_new_game"
            android:textSize="36sp"/>

        <Button
            android:id="@+id/button_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/button_back"
            android:onClick="exit"
            android:text="@string/exit_game"
            android:textSize="36sp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/high_score"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/text_high_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/default_high_score"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>
